# Vulkray

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  COPYING  README.md  README.rst  SECURITY.md  build.sh  conanfile.txt  configure.sh
.github/: PULL_REQUEST_TEMPLATE.md  vulkray-logo.xcf
.github/ISSUE_TEMPLATE/: engine-bug-report.md  engine-feature-request.md
.github/workflows/: build.yml  codeql.yml  commit_check.mjs  commit_naming.yml  conan-settings.yml
cmake/: FindGLFW3.cmake  FindGLM.cmake  FindNinja.cmake
examples/: CMakeLists.txt  TestProgram.cxx
include/: Vulkan.h  Vulkray.h  vulkan.h  vulkray.h
include/Vulkray/: Camera.h  Graphics.h  InputManager.h  JobManager.h  ObjectNode.h  ShowBase.h  UserInput.h  Vector3.h  Vulkan.h
linux/: build.sh  configure.sh  line-count.sh
logo/: vulkray-logo.xcf
shaders/: CMakeLists.txt  triangle.vert
src/: Camera.cxx  EngineBase.cxx  Geometry.cxx  Geometry.hxx  Initialize.cxx  JobManager.cxx  ShowBase.cxx  global_definitions.h  global_definitions.hxx  initialize.cxx
src/core/: Camera.cxx  InputManager.cxx  JobManager.cxx  ObjectNode.cxx  ShowBase.cxx  UserInput.cxx
src/linmath/: Vector3.cxx
src/vulkan/: Buffers.cxx  CommandBuffer.cxx  CommandBuffer.hxx  CommandPool.cxx  DepthBuffering.cxx  DepthTesting.cxx  DescriptorPool.cxx  DescriptorSet.cxx  FrameBuffers.cxx  FrameBuffers.hxx  GraphicsPipeline.cxx  GraphicsPipeline.hxx  ImageViews.cxx  ImageViews.hxx  LogicalDevice.cxx  LogicalDevice.hxx  MultiSampling.cxx  PhysicalDevice.cxx  PhysicalDevice.hxx  RenderPass.cxx  RenderPass.hxx  SurfaceKHR.cxx  SurfaceKHR.hxx  SwapChain.cxx  SwapChain.hxx  Synchronization.cxx  VertexBuffer.cxx  Vulkan.cxx  Vulkan.h  Vulkan.hxx  VulkanInstance.cxx  VulkanInstance.hxx  VulkanMemoryAllocator.cxx  Window.cxx  WindowSurface.cxx  WindowSurface.hxx
tests/: CMakeLists.txt  ExampleTests.cxx  TestProgram.cxx
